[gd_scene format=3 uid="uid://news_scene"]

[ext_resource type="Script" path="res://Scripts/news_display.gd" id="1_news"]

[node name="NewsWindow" type="PopupPanel"]
title = "Market News"
size = Vector2i(600, 400)
visible = false
script = ExtResource("1_news")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 392.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ“° MARKET NEWS"
horizontal_alignment = 1

[node name="NewsScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewsVBox" type="VBoxContainer" parent="VBoxContainer/NewsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CLOSE"
custom_minimum_size = Vector2(0, 40)